# DockerDNA

./: .gitignore  README.md  index.html  make_thumbnail.py  pyproject.toml
.github/workflows/: ci.yml  dockerdna-action.yml  static.yml
dockerdna/: __init__.py  cli.py  scanner.py
dockerdna/ai/: remediation.py
dockerdna/reports/: html.py  json_report.py  sarif.py  sbom.py
dockerdna/scanners/: compliance.py  compose.py  dockerfile.py  secrets.py  supply_chain.py
dockerdna/utils/: patterns.py
docs/: index.html
examples/: Dockerfile.secure  Dockerfile.vulnerable  docker-compose.secure.yml  docker-compose.vulnerable.yml
tests/: test_compliance.py  test_compose.py  test_secrets.py
