[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dockerdna"
version = "1.0.0"
description = "Layer-by-Layer Container Security DNA Analysis — secrets detection, compose scanning, CIS compliance, SBOM, and SARIF output"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sunil Gentyala, Independent Researcher", email = "sunil.gentyala@ieee.org" }
]
keywords = [
    "docker", "container", "security", "devops", "devsecops",
    "sbom", "sarif", "cis", "compliance", "secrets-detection",
    "supply-chain", "owasp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.urls]
Homepage       = "https://github.com/sunilgentyala/DockerDNA"
Documentation  = "https://github.com/sunilgentyala/DockerDNA#readme"
"Bug Tracker"  = "https://github.com/sunilgentyala/DockerDNA/issues"

[project.scripts]
dockerdna = "dockerdna.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dockerdna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
